--- a/01_GenericServlet/WebContent/index.html
+++ b/01_GenericServlet/WebContent/index.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>안녕 나는 도경이</h1>
+	<form action="word">
+        search word : <input type="text" name="word">
+        <input type="submit" value="send">
+    </form>
 </body>
 </html>
