--- a/19_AjaxJavascript/WebContent/ajax03_register.html
+++ b/19_AjaxJavascript/WebContent/ajax03_register.html
@@ -34,12 +34,14 @@
             const id = document.querySelector("#id").value;
             xhr =  new XMLHttpRequest();
             xhr.onreadystatechange = callback;
-            xhr.open("get", "/idCheck.do?id=" + encodeURI(encodeURIComponent(id)));
-            xhr.send(null);
+            xhr.open("post", "/idCheck.do");
+            xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded;charset=utf-8");
+            xhr.send("id=" + document.querySelector("#id").value);
         }
 
         function callback() {
             if(xhr.readyState === 4 && xhr.status === 200) {
+            	/*
             	const text = xhr.responseText;
                 document.querySelector("#idCheckView").innerHTML = "<br>" + decodeURI(decodeURIComponent(xhr.responseText));
                 if(text.includes('불가')) {
@@ -47,6 +49,15 @@
                 } else {
                     document.querySelector("#idCheckView").style.color = 'green';
                 }
+                */
+                
+                const flag = xhr.responseText;
+                const idCheckView = document.querySelector("#idCheckView");
+                if(flag === "true") { // eval(flag) === true
+                	idCheckView.innerHTML = "<span style='color:red;'>ID 사용 불가!!</span>";
+                } else {
+                	idCheckView.innerHTML = "<span style='color:blue;'>ID 사용 가능!!</span>";
+                }             
                 
             }
         }
